--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -72,4 +76,7 @@
 		</plugins>
 	</build>
 
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 </project>
